spacing issues

--- a/components/common/Hero/hero.module.css
+++ b/components/common/Hero/hero.module.css
@@ -31,7 +31,7 @@
   width: 100%;
   height: 100%;
   padding: 0 var(--px-2);
-  margin-top: var(--spacer-lg);
+  padding-bottom: 1em;
 }
 
 .grid > * {
@@ -65,7 +65,6 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 2em;
-    margin-top: var(--spacer-md);
   }
 }
 
